# gwtm

./: AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  gwtm
.github/workflows/: release.yml
packaging/homebrew-tap/: README.md  README.zh-CN.md
packaging/homebrew-tap/Formula/: gwtm.rb
scripts/: update-homebrew-formula.sh
src/: main.rs  tui.rs
